# aqaSend

./: .gitignore  Cargo.toml  README.md  notes.md  todo.md
aqa_logger/: Cargo.toml
aqa_logger/src/: lib.rs
aqa_send/: Cargo.toml
aqa_send/src/: account.rs  cookie.rs  db.rs  db_stuff.rs  delete.rs  download.rs  error.rs  files.rs  headers.rs  lib.rs  list.rs  logger.rs  main.rs  multipart.rs  upload.rs
aqa_send/src/cli_commands/: create_account.rs
aqa_send/src/tasks/: cleanup.rs  mod.rs  save.rs
aqa_send/tests/: tests.rs
aqa_send_web/: README.md  package-lock.json  package.json
aqa_send_web/src/: App.vue  api.ts  fonts.scss  main.ts
aqa_send_web/src/components/: LineAroundText.vue
aqa_send_web/src/router/: index.ts
aqa_send_web/src/views/: Account.vue  Files.vue  Home.vue  Upload.vue
aqa_send_web_server/: Cargo.toml  build.rs
aqa_send_web_server/src/: main.rs
db_migrations/setup/: up.sql
docker/: Dockerfile  aqasend.sh  build.sh  create_image.sh
simple-website/: account.html  account.js  api.mjs  api_endpoint.mjs  files.html  files.js  index.css  index.html  index.js  log_in.html  log_in.js  models.mjs  my_files.html  my_files.js  package-lock.json  package.json  password_input_dialog.mjs  registration.html  registration.js  string_utils.mjs  tsconfig.json  upload.html  upload.js
simple-website/components/: info_msg_box.mjs  password_input_dialog.mjs  tabs_view.mjs
simple-website/info_msg_box/: info_msg_box.mjs
simple-website/sprites/: favicon.aseprite
upload-utils/: Cargo.toml  README.md
