[package]
name = "aqa_send_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dir_embedder = { git = "https://github.com/aQaTL/dir_embedder.git", branch = "main" }
lazy_static = "1.4.0"
hyper = { version = "0.14.16", features = ["server", "http1", "http2", "tcp", "stream"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "macros", "fs"] }
futures = "0.3.19"
log = "0.4.14"

aqa_logger = { path = "../aqa_logger" }

[target.'cfg(target_os = "linux")'.dependencies.systemd-socket-activation]
features = ["dlopen"]
git = "https://github.com/aQaTL/systemd-socket-activation.git"
tag = "v1.1.0"
